Fix display rendering corruption when executing scaled CopyOutputRequests.

GLRendererCopier modifies the GL state, making it inconsistent with that
known to GLRenderer. This change adds a RestoreGLState() call in
GLRenderer to restore consistency.

Bug: 792734
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: Ic4d08997fcba38a5edcd31ae8509b65ad2e2d6a8
Reviewed-on: https://chromium-review.googlesource.com/812957
Commit-Queue: Yuri Wiitala <miu@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523993}
Former-commit-id: 363d6c34f3518f7c1464b3072438b4509101938f